@@ -1,3 +1,7 @@
+Patch: reworked matrix-style navigation, as it lacked some features (eg
+    navigation if workspaces do not form a complete rectangle)
+    M. Ottenbacher <m.ottenbacher at gmx de>
+
 version 0.9.0 --
   - complete rewrite!!!  =:)  See the README and NEWS files for more info.
 
